Fix dry-run table to display shift record ID instead of local entry ID

--- a/css/wiw-admin.css
+++ b/css/wiw-admin.css
@@ -11,3 +11,8 @@
 .wiw-actions-cell .wiw-action-group {
     margin-top: 5px;
 }
+
+#error-page {
+    margin-top: 50px;
+    max-width: 940px;
+}
